--- a/Build_Mate_fe/src/Pages/About.css
+++ b/Build_Mate_fe/src/Pages/About.css
@@ -1,15 +1,15 @@
 .home {
-    font-family: "Poppins",sans-serif;
-    padding: 50px ;
-    background-size: cover;
-    background-position: center;
-    color: white;
-    padding: 4%;
-  }
-  
-  .wall1 {
+  font-family: "Poppins",sans-serif;
+  padding: 50px ;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  padding: 4%;
+}
+ 
+ .pro-mimg {
     filter: brightness(40%);
-    height: 610px;
+    max-height: 670px;
     width: 100%;
     object-fit: cover;
     position: absolute;
@@ -18,11 +18,12 @@
     z-index: -1;
     border-radius: 0 0 0 155px ;
   }
+
   .ab-content{
     display: flex;
-  flex-direction: column;
+    flex-direction: column;
     align-items: center;
-    margin-top: 10%;
+    margin-top: 15%;
   }
 
   .ab-topic{
@@ -35,16 +36,15 @@
     
   }
   .ab-subtopic{
-    font-family: "Poppins",sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 200%;
-    font-weight: 700;
-    width: 829px;
-    height: 120px;
+    font-weight: 500;
+    height: 20%;
     background-color: #0D113E;
     border-radius: 25px;
-    line-height: 48px;
-    text-align: center;
-    padding-top: 1.5%;
+    color: white;
+    padding: 2% 5%;
+    margin-top: 2%;
   }
 
   .larger {
@@ -82,6 +82,7 @@
     display: flex;
     justify-content: space-evenly;
   }
+
   .ab-p1{
     font-family: "Poppins",sans-serif;
     width: 40%;
@@ -93,7 +94,7 @@
     font-family: "Poppins",sans-serif;
     width: 40%;
     text-align: justify;
-    
+   
   }
 
   .aboutBox{
@@ -122,7 +123,7 @@
     height: 35%;
     background-color: #0D113E;
     border-radius: 25px;
-    padding: 5% 2% 2% 2%;
+    padding: 3% 2% 2% 2%;
     
   }
 
@@ -145,7 +146,7 @@
     height: 35%;
     background-color: #0D113E;
     border-radius: 25px;
-    padding: 5% 2% 2% 2%;
+    padding: 3% 2% 2% 2%;
   }
 
   .last {
