--- a/Build_Mate_fe/src/Pages/Home.css
+++ b/Build_Mate_fe/src/Pages/Home.css
@@ -93,7 +93,7 @@
   padding: 8px 16px;
   cursor: pointer;
   border-top-right-radius: 33px; /* Rounded corners */
-  border-top-left-radius: 3px;
+  border-top-left-radius: 33px;
   width: 120px;
   border: none;
   outline: none;
@@ -102,16 +102,17 @@
   z-index: 1;
   box-shadow: #4f4e4e 0 0 20px 0;
   margin-left: -3%;
+  
 }
 
 .switch-button-ma {
-  background-color: #D3D3D3;
+  background-color: #F3F0F0;
   color: black;
   font-size: 16px;
   padding: 8px 16px;
   cursor: pointer;
   border-top-right-radius: 33px; /* Rounded corners */
-  border-top-left-radius: 3px;
+  border-top-left-radius: 33px;
   width: 120px;
   border: none;
   outline: none;
@@ -120,9 +121,27 @@
   margin-left: -3%;
 }
 
-.switch-button.active {
-  background-color: white; /* Change background color for active button */
-  color: blue; /* Change text color for active button */
+.switch-button-ex:hover,
+.switch-button-su:hover,
+.switch-button-ma:hover {
+  background-color: #0D113E;
+  color: #ffffff;
+}
+
+.switch-button-ex.active,
+.switch-button-su.active,
+.switch-button-ma.active {
+  background-color: rgb(22, 16, 80);
+  color: rgb(238, 238, 243);
+  z-index: 4; /* Bring the Supplier button further to the front */
+  transform: scale(1.04); /* Make the Supplier button appear even larger */
+}
+
+.switch-button-ex:not(.active),
+.switch-button-su:not(.active),
+.switch-button-ma:not(.active) {
+  z-index: 2; /* Ensure the non-active buttons are behind the active button */
+  transform: scale(1); /* Reset the scale for non-active buttons */
 }
 
 .search-input {
@@ -154,6 +173,7 @@
 .search-button:hover {
   background-color: darkblue;
 }
+
 .arrow{
   display: flex;
   justify-content: center;
@@ -177,8 +197,9 @@
 }
 
 .h2-text{
-  width: 75%;
+  width: 70%;
   color: black;
+  font-size: 1.8vw;
   text-align: left;
 }
 
@@ -203,6 +224,7 @@
   align-items: center;
 }
 .firstbox{
+  margin-top: 15%;
   padding: 0 10% ;
   max-width: 80%;
   max-height: 10%;
@@ -210,23 +232,22 @@
 .box1{
   display: flex;
   align-items: center;
-  margin: 30% auto auto auto;
+  margin: 25% auto auto auto;
   border-radius: 65px;
   box-shadow: 0 0 40px rgba(67, 67, 67, 0.4);
   
 }
 .dreamimg{
   
-  height: 390px;
+  height: 320px;
   border-radius: 65px 0 0 65px;
 
 }
 .box {
   display: flex;
   align-items: center;
-
   flex-grow: 1;
-  height: 350px;
+  height: 280px;
   padding: 20px 80px 20px 20px; /* Adjust as needed */
   margin-left: -40%;
   background: linear-gradient(to right, 
@@ -240,16 +261,17 @@
     justify-content: center;
 }
 .h1-text{
-  width: 40%;
+  width: 65%;
   color: black;
   text-align: right;
-  font-size: 150%;
+  font-size: 1.8vw;
+  
 }
 .h1-button{
   border-radius: 50px;
   color: white;
-  font-size: 23px;
-  padding: 10px 20px;
+  font-size: 2.0vw;
+  padding: 10px 30px;
   font-weight: 600;
   background-color:#0D113E;
   border: none;
@@ -484,10 +506,6 @@
     padding: 6px 12px; /* Adjust padding */
   }
 
-  .box1,
-  .box2 {
-    height: 300px; /* Adjust height */
-  }
 
   .det {
     margin: 1% auto; /* Adjust margin */
