--- a/Build_Mate_fe/src/Pages/Signup.css
+++ b/Build_Mate_fe/src/Pages/Signup.css
@@ -1,43 +1,40 @@
-.signup{
-    position: absolute;
+.signup01{
     background-color: #0D113E;
-    background-size: cover;
-    height: 100%;
+  background-size: cover;
+  font-family: "Poppins", sans-serif;
+  height: 100vh; 
+  display: flex;
+  justify-content: center; 
+  align-items: center;
 }
 
-.sign-img-container {
-    position: relative;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 2%;
-    width: 80%;
-    height: 600px;
-    border-radius: 100px;
-    box-shadow: 0 0 10px #000;
-    overflow: hidden; /* Hide overflow content (the gradient overlay will cover the entire image) */
+.signup{
+    width: 1100px;
+  height: 620px;
+  padding: 20px;
+  border-radius: 100px;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 1)), url("../Components/Assets/sign-img.jpg");
+  background-size: cover;
+  position: relative;
 }
 
-.gradient-overlay {
+.close-icon {
+    filter: invert(100%);
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75)); /* Adjust the alpha value (last parameter) to control the opacity */
+    top: 10px;
+    right: 10px;
+    margin: 2%;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
 }
 
-.sign-img {
-    display: block;
-    width: 100%;
-    height: auto;
-}
 
 .signup-locate {
-    position: relative;
     z-index: 1;
     text-align: right;
     padding-right: 15%;
-    margin-top: -40%; /* Move the signup-locate above the sign-img-container */
+    margin-top: 10%;
 }
 
 .head1 {
@@ -61,8 +58,7 @@
 }
 
 .signup-Fname,
-.signup-Lname {
-    width: 20%; /* Adjust as needed */
+.signup-Lname { /* Adjust as needed */
     display: inline-block; /* Ensure Fname and Lname are on the same line */
     text-align: center;
     border-radius: 18px;
@@ -94,7 +90,7 @@
     line-height: 40px;
     letter-spacing: 0.12em;
     margin-bottom: 20px;
-    margin-left: 55%;
+    margin-left: 48%;
     
 }
 .row {
@@ -109,12 +105,11 @@
     font-size: 20px;
     letter-spacing: 2px;
     border-radius: 18px;
-    padding: 10px 20px;
+    padding: 10px 15%;
     background-color:#FF6B00;
     border: none;
     cursor: pointer;
-    margin-right: 50px;
-    margin-top: -50px;
+    text-align: center;
 }
 
 .signup-para2 {
