--- a/Build_Mate_fe/src/Pages/About.css
+++ b/Build_Mate_fe/src/Pages/About.css
@@ -31,7 +31,7 @@
     line-height: 186px;
     text-align: center;
     font-family: "Poppins", sans-serif;
-    margin: auto;
+    margin: 5% auto 2% auto ;
     
   }
   .ab-subtopic{
