--- a/Build_Mate_fe/src/Pages/Connect.css
+++ b/Build_Mate_fe/src/Pages/Connect.css
@@ -18,22 +18,23 @@
   }
 
   .para{
+    width: 70%;
     text-align: center;
     font-size: 100%;
-    margin: auto;
+    margin: 2% auto 0 auto;
   }
   .orange-container{
     margin-top: 5%;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-around;
   }
   .orange-container1{
-    padding: 4%;
+    padding: 3%;
     width: 30%;
     background-color: #FF6B00; 
-    border-radius: 69px;
+    border-radius: 30px;
     z-index: 1;
     box-shadow: 0 2px 50px rgba(0, 0, 0, 0.947);
   }
@@ -51,7 +52,7 @@
     text-align: center;
     color: white;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.2vw;
   }
 
   .con-button{
@@ -59,15 +60,13 @@
     background-color: #0D113E;
     color: rgb(255, 255, 255);
     border: 1px solid #ccc;
-    padding: 10px 20px;
+    padding: 5% 10%;
     cursor: pointer;
     transition: all 0.3s ease;
-    width: 60%;
-    padding: 2%;
     border-radius: 15px;
     text-align: center;
     margin-top: 5%;
-    
+    font-weight: 700;
   }
   
   .con-button:hover {
