--- a/Build_Mate_fe/src/Pages/Home.css
+++ b/Build_Mate_fe/src/Pages/Home.css
@@ -5,8 +5,24 @@
   font-family: "Poppins", sans-serif;
 }
 
+.head-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.sub-head-content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  width: 100%;
+  box-sizing: border-box;
+}
 .wall {
-  filter: brightness(40%);
+  filter: brightness(30%);
   position: absolute;
   width: 100%;
   height: 90%;
@@ -21,34 +37,42 @@
 
 
 .content {
-  margin: 10% 0 0 0;
-  position: relative;
-  
+  width: 100%;
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
 }
 
 .content h1{
-  
-  text-align: center;
-  font-size: 3rem;
+  max-width: 800px;
   margin: auto;
+  font-size: 6vh;
+  text-align: center;
 }
 .content p{
-  text-align: center;
-  margin: 0.5% auto;
+  width: 50%;
+  margin: 2% auto 2% auto;
   font-size: 1.5rem;
 }
 
 .ic1 { 
-  z-index: -5;
-  height: 70vh;
-  margin: -15% 0 0 8%;
+  position: absolute;
+  max-height: 100%; /* Adjust based on your design */
+  width: 10%;
+  height: auto;
+  left: 15%;
+  bottom: 30%;
+  margin-right: 20px; /* Space between the image and the content */
+  border-radius: 8px;
+  object-fit: cover;
+
 }
 .search-center {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 5%;
-  margin-top: -17%;
 }
 
 .search-bar-container {
@@ -93,7 +117,7 @@
   padding: 8px 16px;
   cursor: pointer;
   border-top-right-radius: 33px; /* Rounded corners */
-  border-top-left-radius: 3px;
+  border-top-left-radius: 33px;
   width: 120px;
   border: none;
   outline: none;
@@ -102,16 +126,17 @@
   z-index: 1;
   box-shadow: #4f4e4e 0 0 20px 0;
   margin-left: -3%;
+  
 }
 
 .switch-button-ma {
-  background-color: #D3D3D3;
+  background-color: #F3F0F0;
   color: black;
   font-size: 16px;
   padding: 8px 16px;
   cursor: pointer;
   border-top-right-radius: 33px; /* Rounded corners */
-  border-top-left-radius: 3px;
+  border-top-left-radius: 33px;
   width: 120px;
   border: none;
   outline: none;
@@ -120,19 +145,35 @@
   margin-left: -3%;
 }
 
-.switch-button.active {
-  background-color: white; /* Change background color for active button */
-  color: blue; /* Change text color for active button */
+.switch-button-ex:hover,
+.switch-button-su:hover,
+.switch-button-ma:hover {
+  background-color: #0D113E;
+  color: #ffffff;
+}
+
+.switch-button-ex.active,
+.switch-button-su.active,
+.switch-button-ma.active {
+  background-color: rgb(22, 16, 80);
+  color: rgb(238, 238, 243);
+  z-index: 4; /* Bring the Supplier button further to the front */
+  transform: scale(1.04); /* Make the Supplier button appear even larger */
+}
+
+.switch-button-ex:not(.active),
+.switch-button-su:not(.active),
+.switch-button-ma:not(.active) {
+  z-index: 2; /* Ensure the non-active buttons are behind the active button */
+  transform: scale(1); /* Reset the scale for non-active buttons */
 }
 
 .search-input {
   flex-grow: 1;
   width: calc(100% - 150px); /* Take remaining space */
   padding: 8px 15px;
-  border-radius: 0 0 0 25px;
+  border-bottom-left-radius: 33px;
   border: none;
-  font-size: 16px;
-  height: 40px;
   background-color: #ededed;
   color: #0D113E;
   
@@ -155,20 +196,11 @@
   background-color: darkblue;
 }
 
-.dropdown-content {
-     display: block;
-     position: absolute;
-     min-width: 160px;
-     padding: 90px 16px;
-     z-index: 1;
-     cursor: pointer;
-}
-
 .arrow{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 4% auto;
+  margin-top: 5%;
 
 }
 .downarrow{
@@ -177,7 +209,9 @@
   filter:invert(100%);
   cursor: pointer;
 }
-
+.h1{
+  width: 100%;
+}
 .h2-img{
   margin-top: 130px;
   margin-left: 1120px;
@@ -187,8 +221,9 @@
 }
 
 .h2-text{
-  width: 75%;
+  width: 70%;
   color: black;
+  font-size: 1.8vw;
   text-align: left;
 }
 
@@ -203,41 +238,52 @@
   border: none;
 }
 
-.path{
-  background-color: #ffffff;
-  margin-top: -20%;
-  position:absolute;
-  z-index: -10;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.woman-img{
+  position: absolute;
+  max-height: 100%; /* Adjust based on your design */
+  width: 25%;
+  right: 0.5%;
+  filter: opacity(50%);
+  height: auto;
+  margin-right: 20px; /* Space between the image and the content */
+  border-radius: 8px;
+  object-fit: cover;
+  z-index: -100;
+
 }
 .firstbox{
+  margin-top: 5%;
   padding: 0 10% ;
   max-width: 80%;
   max-height: 10%;
 }
 .box1{
   display: flex;
-  align-items: center;
-  margin: 30% auto auto auto;
+  overflow: hidden;
+  margin:  auto;
   border-radius: 65px;
   box-shadow: 0 0 40px rgba(67, 67, 67, 0.4);
   
 }
 .dreamimg{
   
-  height: 390px;
+  height: auto;
+  border-radius: 65px 0 0 65px;
+
+}
+
+.dreamimg01{
+  width: 45%;
+  height: auto;
   border-radius: 65px 0 0 65px;
 
 }
 .box {
   display: flex;
   align-items: center;
-
+  padding: 0 5%;
   flex-grow: 1;
-  height: 350px;
-  padding: 20px 80px 20px 20px; /* Adjust as needed */
+  height: auto;/* Adjust as needed */
   margin-left: -40%;
   background: linear-gradient(to right, 
     rgba(217, 217, 217, 0.19) 0%,      
@@ -250,16 +296,17 @@
     justify-content: center;
 }
 .h1-text{
-  width: 40%;
+  width: 65%;
   color: black;
   text-align: right;
-  font-size: 150%;
+  font-size: 1.8vw;
+  
 }
 .h1-button{
   border-radius: 50px;
   color: white;
-  font-size: 23px;
-  padding: 10px 20px;
+  font-size: 2.0vw;
+  padding: 10px 30px;
   font-weight: 600;
   background-color:#0D113E;
   border: none;
@@ -268,14 +315,11 @@
 }
 .box2{
   display: flex;
-  align-items: center;
   margin: 3% auto auto auto;
   transform: scaleX(-1);
-  
   border-radius: 65px;
   box-shadow: 0 0 40px rgba(67, 67, 67, 0.4);
 }
-
 
 .details-content{
   border: none;
@@ -381,7 +425,7 @@
 .re-con{
   background-color: #d9d9d9;
   width: 100%;
-  margin: 3% auto auto auto;
+  margin: 0 auto auto auto;
   padding: 3% 0;
 }
 
@@ -459,45 +503,15 @@
   width: 200px;
 }
 
+.wel-all-collection{
+  margin-top: 35%;
+}
+
 /* Default styles */
 
 /* Add more breakpoints and adjust styles as needed */
 @media (max-width: 1200px) {
-  .content h1 {
-    font-size: 2.5rem; /* Decrease font size */
-  }
-
-  .content p {
-    font-size: 1.3rem; /* Decrease font size */
-  }
-
-  .search-bar-container {
-    width: 70%; /* Decrease width */
-  }
-
-  .switch-button-ex,
-  .switch-button-su,
-  .switch-button-ma {
-    font-size: 14px; /* Decrease font size */
-    padding: 6px 12px; /* Adjust padding */
-    width: 100px; /* Adjust width */
-  }
-
-  .search-input {
-    font-size: 14px; /* Decrease font size */
-    height: 35px; /* Adjust height */
-  }
-
-  .search-button {
-    font-size: 14px; /* Decrease font size */
-    height: 50px; /* Adjust height */
-    padding: 6px 12px; /* Adjust padding */
-  }
-
-  .box1,
-  .box2 {
-    height: 300px; /* Adjust height */
-  }
+  
 
   .det {
     margin: 1% auto; /* Adjust margin */
@@ -552,5 +566,17 @@
   .re-name,
   .re-po {
     font-size: 10px; /* Decrease font size */
+  }
+}
+/* Responsive design */
+@media (max-width: 768px) {
+  .ic1 {
+      max-width: 100%; /* Adjust the width for smaller screens */
+  }
+}
+
+@media (max-width: 480px) {
+  .ic1 {
+      max-width: 100%; /* Adjust the width for even smaller screens */
   }
 }
