--- a/Build_Mate_fe/src/Pages/Login.css
+++ b/Build_Mate_fe/src/Pages/Login.css
@@ -101,6 +101,17 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
  }
 
+ .close-icon {
+  filter: invert(100%);
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  margin: 2%;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
  .inputs label{
   padding-left: 12px;
   font-size: 20px;
@@ -148,6 +159,24 @@
   align-self: center;
 }
 
+.login-button{
+  background-color: #fff;
+  margin: 5% auto 3% auto; 
+  padding: 2% 20%;
+  border: none;
+  border-radius: 15px;
+  font-size: 20px; 
+  font-weight: 600;
+  width: 95%;
+  position: relative;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.login-button:hover{
+  background-color: #FF6B00;
+  color: #fff;
+}
 @media (max-width: 768px) {
   .login {
     height: auto; /* Allow height to adjust based on content */
