--- a/Build_Mate_fe/src/Pages/Registration.css
+++ b/Build_Mate_fe/src/Pages/Registration.css
@@ -1,180 +1,216 @@
 /* Registration.css */
+body {
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .reg_form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  .reg-form1 {
-    background: #D9D9D9;
-    padding: 20px;
-    width: 40%;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  .reg-formh1{
-    font-size: 55px;
-    font-weight: 700;
-    margin: auto;
-  }
-  .line{
-    border: 3px solid rgb(108, 108, 108);
-    background-color: black;
-    margin-top: -3%;
-  }
-  .reg-form-label{
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    font-size: 20px;
-    padding: 5% 0;
-    border: none;
-  }
-  .reg-form-l1{
-    width: 90%;
-    height: 15%;
-    border: none;
-  }
-  .reg-form-l1 input{
-    width: 100%;
-    border-radius: 7px;
-    line-height: 30px;
-    border: none;
-  }
-  
-  .reg-form-l2{
-    width: 90%;
-    height: 15%;
-    border: none;
-    margin-top: 2%;
-    margin-bottom: 2%;
-  }
-  .reg-form-dropdown1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
-  .reg-form-dropdown1 select{
-    width: 25%;
-    font-size: 13px;
-    border-radius: 7px;
-    border: none;
-    padding: 5px;
-  }
-  .reg-form-l3{
-    display: flex;
-    justify-content: flex-start;
-    width: 100%;
-    justify-content: flex-start;
-    margin-bottom: 1%;
-  }
-  
-  .reg-form-l3 input{
-    width: 100%;
-    border-radius: 7px;
-    line-height: 30px;
-    border: none;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  font-family: "Poppins", sans-serif;
+  padding: 5%;
+  background-color: #FF6B00;
+}
 
-  .reg-form-l3 select{
-    width: 100%;
-    font-size: 15px;
-    border-radius: 7px;
-    border: none;
-    padding: 8px;
-  }
+.reg-form1 {
+  background: #ffffff;
+  padding: 40px;
+  width: 50%;
+  border-radius: 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+}
 
-  .reg-form-l4{
-    margin-left: 20%;
-  }
+.reg-form1 input{
+  margin-bottom: 2%;
+}
 
-  .user-type-buttons {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0.5em;
-    font-size: 15px;
-    font-weight: 800;
-    margin-top: 0.5em;
+.reg-form1 label{
+  
+  font-size: 1.25vw;
+}
+
+.reg-formh1 {
+  font-size: 4.0vw;
+  font-weight: 700;
+  text-align: center;
+  margin: auto;
+  color: #333333;
+}
+
+.line {
+  border: 0;
+  height: 1px;
+  background-color: #cccccc;
+  margin: 20px 0;
+}
+
+.reg-form-label {
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: #333333;
+}
+
+.reg-form-fulll1{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2%;
+}
+.reg-form-fulll1 label{
+  width: 40%;
+}
+.reg-form-l2 input{
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #cccccc;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+}
+
+
+.reg-form-l1 input,
+.reg-form-l3 input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #cccccc;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+}
+
+.reg-form-dropdown1 {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2%;
+}
+
+.reg-form-l3{
+  display: flex;
+  justify-content: space-between;
+}
+
+.reg-form-l3 label{
+  width: 40%;
+}
+.reg-form-dropdown1 select {
+  width: 25%;
+  font-size: 14px;
+  padding: 10px;
+  padding-right: 20px;
+  border-radius: 5px;
+  border: 1px solid #cccccc;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.reg-form-l3 select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #cccccc;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+}
+
+.reg-form-l4 {
+  margin-left: 20%;
+  margin-bottom: 20px;
+}
+
+.user-type-buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
 }
 
 .user-type-buttons label {
-    padding: 10px 5px;
-    border: none;
-    background-color: white;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
-    /* user-select: none; */
+  display: flex;
+  flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  padding: 10px 0px;
+  border: 2px solid #cccccc;
+  border-radius: 25px;
+  cursor: pointer;
+  line-height:1.5vw;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .user-type-buttons input[type="radio"] {
-    display: none;
+  display: none;
 }
 
 .user-type-buttons input[type="radio"]:checked + label {
-    background-color: #0D113E;
-    color: white;
-    border-color: #0D113E;
-    filter: invert(100%);
+  background-color: #0D113E;
+  color: white;
+  border-color: #0D113E;
 }
 
 .user-type-buttons label:hover {
-    background-color: #0D113E;
-    color: white;
+  background-color: #0D113E;
+  color: white;
 }
 
-.reg-image{
+.reg-image {
   width: 25px;
   padding: 5px;
 }
-.reg-image:hover{
+
+.reg-image:hover {
   filter: invert(100%);
 }
 
-.reg-form-l5{
+.reg-form-l5 {
   display: flex;
   width: 20%;
   text-align: center;
   flex-direction: column;
   align-items: center;
-  line-height: 100%;
 }
 
-.reg-form-l6{
-  font-size: 15px;
+.reg-form-l6 {
+  font-size: 14px;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: baseline;
   justify-content: flex-start;
 }
 
-.reg-buttons{
+.reg-buttons {
   display: flex;
-  flex-direction: row;
-    justify-content: flex-end;
+  justify-content: flex-end;
+  margin-top: 20px;
 }
-.reg-buttons button{
-  width:20% ;
-  height: 15%;
-  font-size: 15px;
+
+.reg-buttons button {
+  width: 120px;
+  height: 40px;
+  font-size: 14px;
   font-weight: 600;
-  padding: 5px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #0D113E;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, color 0.3s;
+  background-color:#FF6B00;
 }
 
-.reg-buttons button:hover{
-  color: white;
+.reg-buttons button:hover {
   background-color: #0D113E;
+  color: white;
 }
 
-.reg-formh3{
-  font-size: 15px;
+.reg-formh3 {
+  font-size: 2.25vw;;
   font-weight: 700;
-  text-align: left;
-  margin-bottom: 2px;
+  margin: auto;
+  margin-bottom: 5px;
+  color: #000000;
 }
 
-.reg-button-b1{
+.reg-button-b1 {
   margin-left: 5%;
 }
