--- a/Build_Mate_fe/src/Components/Navbar/Navbar.css
+++ b/Build_Mate_fe/src/Components/Navbar/Navbar.css
@@ -79,3 +79,60 @@
     }
   }
   
+  
+  ul{
+    margin:0.5% 0 ;
+    padding:0;
+    display:flex;
+  }
+  
+  ul li{
+    list-style:none;
+    transition:0.5s;font-weight: 500;
+  }
+  
+  ul li a{
+    display: block;
+    
+    position:relative;
+    text-decoration:none;
+    padding:2px 5px;
+    color:#fff;
+    text-transform:uppercase;
+    transition:0.5s;
+  }
+  
+  ul:hover li a{
+    transform:scale(1);
+    opacity:0.8;
+    filter:blur(1px);
+  }
+  
+  ul li a:hover{
+    transform:scale(1.2);
+    opacity:1;
+    filter:blur(0);
+    text-decoration:none;
+    color:#fff;
+  }
+  
+  ul li a:before{
+    content:'';
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    border-radius: 15px;
+    border: 1px solid white;
+    transition:0.5s;
+    transform-origin:right;
+    transform:scaleX(0);
+    z-index:-1;
+  }
+  
+  ul li a:hover:before{
+    transition:transform 0.5s;
+    transform-origin:left;
+    transform:scaleX(1);
+  }
