--- a/Build_Mate_fe/src/Pages/Home.css
+++ b/Build_Mate_fe/src/Pages/Home.css
@@ -43,15 +43,23 @@
   flex-direction: column;
   z-index: 1;
 }
-.home-content-1{
 
-}
-.content h1{
+.home-content-1 h1{
   max-width: 800px;
+  content: "";
   margin: auto;
   font-size: 6vh;
   text-align: center;
 }
+
+  
+.home-content-1 h1::after {
+  content: "";
+  line-height: 48px;
+  animation: abomination1 2.5s steps(25) 1;
+  animation-fill-mode: forwards;
+}
+
 .content p{
   width: 50%;
   margin: 2% auto 2% auto;
@@ -119,7 +127,7 @@
   padding: 8px 16px;
   cursor: pointer;
   border-top-right-radius: 33px; /* Rounded corners */
-  border-top-left-radius: 3px;
+  border-top-left-radius: 33px;
   width: 120px;
   border: none;
   outline: none;
@@ -128,16 +136,17 @@
   z-index: 1;
   box-shadow: #4f4e4e 0 0 20px 0;
   margin-left: -3%;
+  
 }
 
 .switch-button-ma {
-  background-color: #D3D3D3;
+  background-color: #F3F0F0;
   color: black;
   font-size: 16px;
   padding: 8px 16px;
   cursor: pointer;
   border-top-right-radius: 33px; /* Rounded corners */
-  border-top-left-radius: 3px;
+  border-top-left-radius: 33px;
   width: 120px;
   border: none;
   outline: none;
@@ -146,19 +155,35 @@
   margin-left: -3%;
 }
 
-.switch-button.active {
-  background-color: white; /* Change background color for active button */
-  color: blue; /* Change text color for active button */
+.switch-button-ex:hover,
+.switch-button-su:hover,
+.switch-button-ma:hover {
+  background-color: #0D113E;
+  color: #ffffff;
+}
+
+.switch-button-ex.active,
+.switch-button-su.active,
+.switch-button-ma.active {
+  background-color: rgb(22, 16, 80);
+  color: rgb(238, 238, 243);
+  z-index: 4; /* Bring the Supplier button further to the front */
+  transform: scale(1.04); /* Make the Supplier button appear even larger */
+}
+
+.switch-button-ex:not(.active),
+.switch-button-su:not(.active),
+.switch-button-ma:not(.active) {
+  z-index: 2; /* Ensure the non-active buttons are behind the active button */
+  transform: scale(1); /* Reset the scale for non-active buttons */
 }
 
 .search-input {
   flex-grow: 1;
   width: calc(100% - 150px); /* Take remaining space */
   padding: 8px 15px;
-  border-radius: 0 0 0 25px;
+  border-bottom-left-radius: 33px;
   border: none;
-  font-size: 16px;
-  height: 40px;
   background-color: #ededed;
   color: #0D113E;
   
@@ -236,7 +261,6 @@
 .firstbox{
   margin-top: 5%;
   padding: 0 10% ;
-  max-width: 80%;
   max-height: 10%;
 }
 .box1{
@@ -246,6 +270,14 @@
   border-radius: 65px;
   box-shadow: 0 0 40px rgba(67, 67, 67, 0.4);
   
+}
+.box3{
+  display: flex;
+  overflow: hidden;
+  
+  margin: 3% auto auto auto;
+  border-radius: 65px;
+  box-shadow: 0 0 40px rgba(67, 67, 67, 0.4);
 }
 .dreamimg{
   
@@ -275,7 +307,7 @@
   border-radius: 0 65px 65px 0;
   flex-direction: column;
     align-items: flex-end;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 .h1-text{
   width: 65%;
@@ -455,13 +487,11 @@
 
 .re-name{
   font-size: 13px;
-  margin: auto;
   text-align: left;
 }
 
 .re-po{
   font-size: 10px;
-  margin: auto;
 }
 
 .profile-img{
@@ -478,7 +508,7 @@
 
 }
 
-.review-star{
+.reviewStar{
   display: flex;
 }
 
@@ -490,7 +520,47 @@
 .wel-all-collection{
   margin-top: 35%;
 }
+.leFadeIn {
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+.animate__fadeInLeft{
+  animation-delay: 5s;
+}
+.leFadeInVisible {
+  opacity: 1;
+  transform: translateX(0);
+}
 
+.animate__backInRight {
+  animation-delay: 5s;
+  opacity: 0;
+  transform: translateX(100px);
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.animate__backInRightVisible {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.animate__fadeInLeft {
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.animate__fadeInLeftVisible {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.position{
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
 /* Default styles */
 
 /* Add more breakpoints and adjust styles as needed */
@@ -588,3 +658,83 @@
       max-width: 100%; /* Adjust the width for even smaller screens */
   }
 }
+
+@keyframes abomination1 {
+  0% {
+    content: "C";
+  }
+  4% {
+    content: "Co";
+  }
+  8% {
+    content: "Con";
+  }
+  12% {
+    content: "Conn";
+  }
+  16% {
+    content: "Conne";
+  }
+  20% {
+    content: "Connec";
+  }
+  24% {
+    content: "Connect";
+  }
+  28% {
+    content: "Connect,";
+  }
+  32% {
+    content: "Connect, ";
+  }
+  36% {
+    content: "Connect, C";
+  }
+  40% {
+    content: "Connect, Cr";
+  }
+  44% {
+    content: "Connect, Cre";
+  }
+  48% {
+    content: "Connect, Crea";
+  }
+  52% {
+    content: "Connect, Creat";
+  }
+  56% {
+    content: "Connect, Create";
+  }
+  60% {
+    content: "Connect, Create,";
+  }
+  64% {
+    content: "Connect, Create, ";
+  }
+  68% {
+    content: "Connect, Create, C";
+  }
+  72% {
+    content: "Connect, Create, Co";
+  }
+  76% {
+    content: "Connect, Create, Con";
+  }
+  80% {
+    content: "Connect, Create, Cons";
+  }
+  84% {
+    content: "Connect, Create, Const";
+  }
+  88% {
+    content: "Connect, Create, Constr";
+  }
+  92% {
+    content: "Connect, Create, Constru";
+  }
+  96% {
+    content: "Connect, Create, Construc";
+  }
+  100% {
+    content: "Connect, Create, Construct";
+  }}
