--- a/Build_Mate_fe/src/Pages/Registration.css
+++ b/Build_Mate_fe/src/Pages/Registration.css
@@ -124,33 +124,12 @@ body {
   margin-bottom: 20px;
 }
 
-.user-type-buttons label {
-  display: flex;
-  flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  padding: 10px 0px;
-  border: 2px solid #cccccc;
-  border-radius: 25px;
-  cursor: pointer;
-  line-height:1.5vw;
-  transition: background-color 0.3s, color 0.3s;
-}
 
 .user-type-buttons input[type="radio"] {
   display: none;
 }
 
-.user-type-buttons input[type="radio"]:checked + label {
-  background-color: #0D113E;
-  color: white;
-  border-color: #0D113E;
-}
 
-.user-type-buttons label:hover {
-  background-color: #0D113E;
-  color: white;
-}
 
 .reg-image {
   width: 25px;
@@ -213,4 +192,32 @@ body {
 
 .reg-button-b1 {
   margin-left: 5%;
+}
+
+.btn1{
+  display: flex;
+  width: 20%;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.reg-type-button{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+  border: none;
+  width: 20%;
+  padding: 10px 0px;
+  border: 2px solid #cccccc;
+  border-radius: 25px;
+  cursor: pointer;
+  line-height:1.5vw;
+  
+  transition: background-color 0.3s, color 0.3s;
+} 
+
+.reg-type-button:hover {
+  background-color: #0D113E;
+  color: white;
 }
