--- a/Build_Mate_fe/src/Components/Navbar/Navbar.css
+++ b/Build_Mate_fe/src/Components/Navbar/Navbar.css
@@ -116,23 +116,30 @@
     color:#fff;
   }
   
-  ul li a:before{
-    content:'';
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
+  ul li a:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     border-radius: 15px;
     border: 1px solid white;
-    transition:0.5s;
-    transform-origin:right;
-    transform:scaleX(0);
-    z-index:-1;
+    transition: 0.5s;
+    transform-origin: right;
+    transform: scaleX(0);
+    z-index: -1;
   }
   
-  ul li a:hover:before{
-    transition:transform 0.5s;
-    transform-origin:left;
-    transform:scaleX(1);
+  ul li a.active:before {
+    transition: transform 0.5s;
+    transform-origin: left;
+    transform: scaleX(1);
+    font-weight: 600;
+  }
+  .nav-menu .active {
+    border: 1px solid rgb(255, 255, 255); /* Color and style of the border */
+    transition: border-bottom 0.3s ease; /* Smooth transition */
+    border-radius: 15px;
+    font-weight: 600;
   }
