--- a/Build_Mate_fe/src/Pages/Contact.css
+++ b/Build_Mate_fe/src/Pages/Contact.css
@@ -45,11 +45,13 @@
   font-weight: 1000;
   font-size: 300%;
   line-height: 80%;
+  letter-spacing: 5px;
   text-shadow: 0 2px 50px rgb(255, 255, 255);
 }
 
 .contact-head span{
   font-size: 60%;
+  font-weight: 500;
   margin: auto;
 }
 .contact-orange-container {
@@ -58,14 +60,14 @@
   z-index: 1;
   width: 53%;
   height: 60%;
-  padding: 2% 5%;
+  padding: 5%;
 }
 
 .contact-white-container2 {
   border-radius: 0 50px 50px 0;
   background-color: #FFFFFF;
   z-index: 1;
-  padding: 3% 4%;
+  padding: 5% 4%;
 }
 
 .contact-head1 {
@@ -90,7 +92,6 @@
   color: black;
   border: none;
   z-index: 100;
-  box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.336);
 }
 
 .contact-email {
@@ -105,7 +106,6 @@
   background-color: #FFFFFF;
   color: black;
   border: none;
-  box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.336);
 }
 
 .contact-subject {
@@ -120,7 +120,6 @@
   background-color: #FFFFFF;
   color: black;
   border: none;
-  box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.336);
 }
 
 .contact-message {
@@ -135,7 +134,6 @@
   background-color: #FFFFFF;
   color: black;
   border: none;
-  box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.336);
 }
 
 
@@ -143,7 +141,6 @@
   font-size: 100%;
   background-color: #0D113E;
   color: rgb(255, 255, 255);
-  border: 1px solid #ccc;
   padding: 10px 20px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -151,7 +148,7 @@
   padding: 2%;
   border-radius: 15px;
   text-align: center;
-  
+  border: none;
   
 }
 
@@ -175,12 +172,12 @@
   display: flex;
   flex-direction: column;
     align-items: stretch;
-    margin-top: 5%;
+    margin-top: 2%;
 
 }
 
-.con-01 input{
-  padding-left: 0 5%;
+.con-01 input,textarea{
+  padding-left: 5%;
   width: 100%;
 }
 .con-0{
@@ -195,7 +192,7 @@
 }
 
 .contact-para span{
-  font-size: 120%;
+  font-size: 140%;
   font-weight: 600;
 }
 .contact-information{
