--- a/Build_Mate_fe/src/Pages/Signup.css
+++ b/Build_Mate_fe/src/Pages/Signup.css
@@ -33,8 +33,8 @@
 .signup-locate {
     z-index: 1;
     text-align: right;
-    padding-right: 15%;
-    margin-top: 10%;
+    padding-right: 5%;
+    margin-top: 5%;
 }
 
 .head1 {
@@ -42,7 +42,6 @@
     color: #0D113E;
     font-size: 45px;
     font-weight: 1000;
-    line-height: 0.5;
     letter-spacing: 0.07em;
 }
 
@@ -56,11 +55,31 @@
     text-align: right;
     margin-bottom: 5%;
 }
-
+.signupForm{
+    flex-direction: column;
+    display: flex;
+    align-items: flex-end;
+    margin-left: 47%;
+}
+.signupDiv{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+}
+.signupDiv input{
+    width: 48%;
+}
+.signupFormDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 .signup-Fname,
 .signup-Lname { /* Adjust as needed */
     display: inline-block; /* Ensure Fname and Lname are on the same line */
-    text-align: center;
+    text-align: left;
+    padding-left: 5%;
     border-radius: 18px;
     border-color: #ffff;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
@@ -79,7 +98,8 @@
 .signup-password {
     width: 100%; /* Adjust as needed */
     display: inline-block; /* Ensure Fname and Lname are on the same line */
-    text-align: center;
+    text-align: left;
+    padding-left: 5%;
     border-radius: 18px;
     border-color: #ffffff;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
@@ -90,14 +110,18 @@
     line-height: 40px;
     letter-spacing: 0.12em;
     margin-bottom: 20px;
-    margin-left: 48%;
     
 }
 .row {
     display: flex;
     margin-bottom: 20px;
+    flex-direction: column;
+    align-items: flex-start;
 }
-
+.btn-container{
+    margin-top: 2%;
+    width: 120%;
+}
 .btn {
     color: #ffffff;
     font-family: Poppins;
@@ -105,7 +129,7 @@
     font-size: 20px;
     letter-spacing: 2px;
     border-radius: 18px;
-    padding: 10px 15%;
+    padding: 10px 10%;
     background-color:#FF6B00;
     border: none;
     cursor: pointer;
