--- a/Build_Mate_fe/src/Pages/Contact.css
+++ b/Build_Mate_fe/src/Pages/Contact.css
@@ -22,12 +22,9 @@
   display: flex;
   flex-direction: column;
     align-items: stretch;
-  width: 70%;
-  height: 85%;
-  background-color: #ffffff68; /* Adjust the opacity as needed */
+  height: 85%; /* Adjust the opacity as needed */
   border-radius: 103px;
   z-index: 0;
-  box-shadow: 0 2px 50px rgba(0, 0, 0, 0.947);
   margin-top: -2%;
   padding: 2%;
 }
@@ -41,12 +38,12 @@
 }
 .contact-head {
   text-align: center;
-  color: #0D113E;
+  color: #ffffff;
   font-weight: 1000;
   font-size: 300%;
   line-height: 80%;
   letter-spacing: 5px;
-  text-shadow: 0 2px 50px rgb(255, 255, 255);
+  text-shadow: 0 2px 100px rgb(255, 255, 255);
 }
 
 .contact-head span{
