--- a/Build_Mate_fe/src/Pages/ImageGeneration.css
+++ b/Build_Mate_fe/src/Pages/ImageGeneration.css
@@ -1,35 +1,53 @@
 /* Styles for the ImageGeneration component */
-
+.generator{
+  display: flex;
+  flex-direction: column;
+  background-image: url('../Components/Assets/ImageGenerator01.jpg');
+  background-color: rgba(255, 255, 255, 0.5); 
+  background-size: cover;
+  background-position: center;
+}
   .image-generator {
-    text-align: center;font-family: 'Arial', sans-serif;
-    background-color: #0d113e;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
+    background-color: rgba(0, 0, 0, 0.5); 
   }
   
   .image-gen-wrapper {
     background-color: white;
     padding: 40px;
-    border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    width: 400px;
+    width: 1100px;
+    height: 400px;
+    border-radius: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .ai-img{
+    width: 200px;
+    height: 200px;
   }
   
   .image-gen-wrapper h1 {
     color: #0d113e;
-    margin-bottom: 10px;
-    
+    margin-bottom: 5px;
+    text-align: center;
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 40px;
+    line-height: 40px;
   }
   
   .image-gen-wrapper h5 {
     color: #ff6b00;
     margin-bottom: 20px;
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
   }
   
   .prompt-input-field {
@@ -37,7 +55,7 @@
     padding: 14px;
     margin-bottom: 20px;
     border: 2px solid #0d113e;
-    border-radius: 8px;
+    border-radius: 15px;
     font-size: 16px;
     outline: none;
     transition: border-color 0.3s ease;
@@ -52,7 +70,7 @@
     color: white;
     padding: 14px;
     border: none;
-    border-radius: 8px;
+    border-radius: 15px;
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -80,4 +98,15 @@
   .image-head{
     text-transform: uppercase;
     font-size: 150px;
+  }
+  .imageGenForm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .navImage{
+    background-color: rgba(0, 0, 0, 0.5); 
+  }
+  .image-gen-right{
+    width: 60%;
   }
