--- a/Build_Mate_fe/src/Pages/Signup.css
+++ b/Build_Mate_fe/src/Pages/Signup.css
@@ -35,6 +35,9 @@
     text-align: right;
     padding-right: 5%;
     margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .head1 {
@@ -45,6 +48,26 @@
     letter-spacing: 0.07em;
 }
 
+.inputss{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.inputss input{
+    background-color: #fff;
+    margin: 0 auto 10px auto;
+    height: 50px;
+    border: none;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    gap: 35px;
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+   }
 .par1 {
     font-family: Poppins, sans-serif;
     font-size: 19px;
@@ -58,8 +81,8 @@
 .signupForm{
     flex-direction: column;
     display: flex;
-    align-items: flex-end;
-    margin-left: 47%;
+    align-items: flex-start;
+    width: 50%;
 }
 .signupDiv{
     display: flex;
@@ -120,7 +143,8 @@
 }
 .btn-container{
     margin-top: 2%;
-    width: 120%;
+    width: 100%;
+    
 }
 .btn {
     color: #ffffff;
